# env

./: .gitignore  README.md
Python/default/: pyproject.toml
Python/openai-env/: pyproject.toml
R/default/: .RData  .Rhistory  .Rprofile
