[tool.poetry]
name = "notepc"
version = "0.1.0"
description = "use for notepc"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
pillow = "^10.1.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
opencv-python = "^4.8.1.78"
jupyterlab = "^4.0.11"
h5py = "^3.10.0"
mpl-tools = "^0.4.0"
umap-learn = "^0.5.5"
datashader = "^0.16.0"
bokeh = "3.4.0"
holoviews = "^1.18.1"
colorcet = "^3.0.1"
scikit-image = "^0.22.0"
geoparse = "^2.0.3"
openpyxl = "^3.1.2"
soappy = "^0.12.22"
mlxtend = "^0.23.1"
torch = "^2.2.2"
torchvision = "^0.17.2"
jupyter-bokeh = "^4.0.5"
polars = "^1.1.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.2"
scipy = "^1.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
